--- a/package.json
+++ b/package.json
@@ -15,20 +15,35 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "expo": "~52.0.17",
+    "expo-av": "~15.0.1",
     "expo-checkbox": "~4.0.0",
     "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
-    "expo-video": "~2.0.2",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "expo-video": "~2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@react-native-community/blur",
+          "@react-native-vector-icons/fontawesome",
+          "eslint",
+          "firebase",
+          "expo-video"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
